--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,6 +1,6 @@
 body {
 	font-family: 'Roboto', sans-serif;
-	background: rgb(65, 165, 231);
+	background: rgb(0, 0, 0);
 }
 
 .site {
@@ -14,7 +14,7 @@ body {
 }
 
 h1 {
-	font-family: 'Courgette', cursive;
+	font-family: Arial, Helvetica, sans-serif;
 	font-size: 4em;
 	text-align: center;
 	margin-top: 75px;
@@ -28,6 +28,7 @@ p {
 	line-height: 1.75;
 	margin: auto;
 	font-size: 1.2em;
+	color: #C5D0D2;
 }
 
 footer {
@@ -41,6 +42,7 @@ footer {
 
 .btn {
 	margin: 30px;
+	color: rgb (98, 98, 98);
 }
 
 form {
@@ -48,8 +50,12 @@ form {
 }
 
 a {
-	color: rgb(10, 129, 123);
+	color: rgb(0, 0, 0);
 	font-size: 20px;
+}
+
+label.required { 
+	color: rgb (255, 255, 255); 
 }
 
 #soulmateModal {
@@ -64,7 +70,7 @@ a {
 span {
 	margin-left: 10px;
 	margin-right: 10px;
-	color: white;
+	color: rgb (0,0,0);
 	font-size: 20px;
 
 }
